--- a/templates/index.html
+++ b/templates/index.html
@@ -4,79 +4,70 @@
     <title>Call Scheduling Service</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='mainpage.css') }}">
     <script src="{{ url_for('static', filename='script.js') }}"></script>
-
 </head>
 <body>
-    <h1>Call Scheduling Service</h1>
-    <br><br>
-    <label for="mycurrentgroupname">Group Name:</label>
-    <input type="text" id="groupname" required value="test">
-    <br><br>
-    <!-- Form to input data -->
-       
-    <form>
-        <!-- Day of the week selector with checkboxes using a table format -->
-        <table>
-            <tr>
-                <td><input type="checkbox" name="days" value="Monday"> Monday &nbsp &nbsp &nbsp</td>                      
-                <td><input type="checkbox" name="days" value="Tuesday">Tuesday &nbsp &nbsp &nbsp</td>
-                                
-            </tr>
+    <div class="container">
+        <h1>Call Scheduling Service</h1>
+        <div class="form-group">
+            <label for="mycurrentgroupname">Group Name:</label>
+            <input type="text" id="groupname" required value="test">
+        </div>
 
-            <tr>
-                <td><input type="checkbox" name="days" value="Wednesday">Wednesday</td>
-                <td><input type="checkbox" name="days" value="Thursday">Thursday &nbsp &nbsp</td>                       
-            
-            </tr>
+        <form class="form-container">
+            <div class="form-group">
+                <label>Select Days:</label>
+                <table>
+                    <tr>
+                        <td><input type="checkbox" name="days" value="Monday"> Monday</td>
+                        <td><input type="checkbox" name="days" value="Tuesday"> Tuesday</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox" name="days" value="Wednesday"> Wednesday</td>
+                        <td><input type="checkbox" name="days" value="Thursday"> Thursday</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox" name="days" value="Friday"> Friday</td>
+                        <td><input type="checkbox" name="days" value="Saturday"> Saturday</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox" name="days" value="Sunday"> Sunday</td>
+                    </tr>
+                </table>
+            </div>
+            <div class="form-group button-group">
+                <button type="button" id="loadDays" onclick="LoadDays()">Load Days</button>
+                <button type="button" id="selectAll" onclick="SelectAllDays()">Select All</button>
+                <button type="button" id="saveDays" onclick="SaveDays()">Save Days</button>
+            </div>
+        </form>
 
-            <tr>
-                <td><input type="checkbox" name="days" value="Friday">Friday &nbsp &nbsp &nbsp &nbsp &nbsp</td>
-                <td><input type="checkbox" name="days" value="Saturday">Saturday &nbsp &nbsp</td>
-            </tr>
+        <form id="callForm" class="form-container">
+            <div class="form-group">
+                <label for="firstName">First Name:</label>
+                <input type="text" id="firstName" required>
+            </div>
+            <div class="form-group">
+                <label for="lastName">Last Name:</label>
+                <input type="text" id="lastName" required>
+            </div>
+            <div class="form-group">
+                <label for="phoneNumber">Phone Number (optional):</label>
+                <input type="text" id="phoneNumber">
+            </div>
+            <div class="form-group button-group">
+                <button type="button" onclick="AddToCallList()">Add Person to Call List</button>
+                <button type="button" onclick="RemoveFromCallList()">Remove Person From Call List</button>
+                <button type="button" onclick="ImportCallListFromFile()">Import Call List</button>
+            </div>
+        </form>
 
-            <tr>    
-                <td><input type="checkbox" name="days" value="Sunday">Sunday &nbsp &nbsp &nbsp &nbsp</td>
-            </tr>
+        <div class="form-group button-group">
+            <button type="button" onclick="DisplayCallList()">Display Call List</button>
+            <button type="button" onclick="generateCallSchedule()">Generate Call Schedule</button>
+        </div>
 
-        </table>
-    
-        
-         <!-- "Select All" button for the checkboxes -->
-         <button type="button" id="loadDays" onclick="LoadDays()">Load Days</button>
-         <button type="button" id="selectAll" onclick="SelectAllDays()">Select All</button>
-         <button type="button" id="saveDays" onclick="SaveDays()">Save Days</button>
-
-    </form>
-
-    <form id="callForm">
-        <table>
-            <tr style:>
-                <td><label for="firstName">First Name:</label></td>
-                <td><input type="text" id="firstName" required></td>
-            </tr>
-            <tr>
-                <td><label for="lastName">Last Name:</label></td>
-                <td><input type="text" id="lastName" required></td>
-            </tr>
-            <tr>
-                <td><label for="phoneNumber">Phone Number (optional):</label></td>
-                <td><input type="text" id="phoneNumber"></td>
-            </tr>
-        </table>
-
-        <button type="button" onclick="AddToCallList()">Add Person to Call List</button>
-        <button type="button" onclick="RemoveFromCallList()">Remove Person From Call List</button>
-        <button type="button" onclick="ImportCallListFromFile()">Import Call List</button>
-    </form>
-    
-    <button type="button" onclick="DisplayCallList()">Display Call List</button>
-    <button type="button" onclick="generateCallSchedule()">Generate Call Schedule</button>
-
-    <!-- List to display submitted data -->
-    <ul id="CallersList"></ul>
-    
-    <!-- List to display submitted data -->
-    <ul id="generatedCallSchedule"></ul>
-
+        <ul id="CallersList" class="callers-list"></ul>
+        <ul id="generatedCallSchedule" class="call-schedule"></ul>
+    </div>
 </body>
 </html>
